@@ -1,5 +1,8 @@
 UNRELEASED, S3QL TIP
 
+  * Fixed parsing of storage urls, s3s:// no longer generates bogus
+    error message.
+
   * Fixed support for prefix in storage urls.
 
 2011-10-06, S3QL 1.4
